<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f8fe">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/slide_1_text_view_margin_top_2"
        android:gravity="center"
        android:text="@string/welcome_to_bp"
        android:textColor="#1c1c1c"
        android:textSize="@dimen/slide_1_text_view_text_size"
        app:fontFamily="@font/karla_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/slide_1_image_view_size"
        android:layout_height="@dimen/slide_1_image_view_size"
        android:layout_marginTop="@dimen/slide_1_image_view_margin_top"
        android:src="@drawable/pocket"
        android:contentDescription="@string/pocket_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/slide_1_text_view_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/slide_1_text_view_margin_top"
        android:gravity="center"
        android:text="@string/take_control_etc"
        android:textColor="#656565"
        app:fontFamily="@font/karla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/budget_margin_top"
        android:text="@string/budget_planner"
        android:textColor="#1c1c1c"
        android:textSize="@dimen/budget_text_size"
        app:fontFamily="@font/karla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>