<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".presentation.welcomeScreen.signUp.SignUpActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginTop="130dp"
        android:autofillHints=""
        android:background="@null"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:lineSpacingExtra="3sp"
        android:text="@string/let_s_get_started"
        android:textColor="#1c1c1c"
        android:textSize="16sp"
        app:fontFamily="@font/karla_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="7dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/line_for_sign_up_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_shape_sign_up"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="@dimen/sign_up_button_text_size"
        app:fontFamily="@font/karla_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>