<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f8fe">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/slide_3_text_view_margin_top"
        android:text="@string/budget_planner"
        android:textColor="#1c1c1c"
        android:textSize="@dimen/budget_text_size"
        app:fontFamily="@font/karla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/slide_3_image_view_width"
        android:layout_height="@dimen/slide_3_image_view_height"
        android:layout_marginTop="@dimen/slide_3_image_view_margin_top"
        android:contentDescription="@string/man_with_phone"
        android:src="@drawable/man_with_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/slide_3_layout_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/slide_3_text_margin_top"
        android:gravity="center"
        android:text="@string/take_control_etc"
        android:textColor="#656565"
        app:fontFamily="@font/karla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</android.support.constraint.ConstraintLayout>